codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__model_selection_popup.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: popup
---
  Select Model and Effort
  Access legacy models by running codex -m <model_name> or in your config.toml

› 1. gpt-5.5 (default)   A new class of intelligence for coding and
                         professional work.
  2. gpt-5.4             Latest frontier agentic coding model.
  3. gpt-5.4-mini        Our strongest mini model yet for coding, computer
                         use, and subagents.
  4. gpt-5.3-codex       The most capable agentic coding model to date.
  5. gpt-5.2-codex       Frontier agentic coding model.
  6. gpt-5.1-codex-max   Codex-optimized flagship for deep and fast reasoning.
  7. gpt-5.2             Latest frontier model with improvements across
                         knowledge, reasoning and coding
  8. gpt-5.1-codex-mini  Optimized for codex. Cheaper, faster, but less
                         capable.

  Press enter to select reasoning effort, or esc to dismiss.
